--- a/JN_Dr.ipynb
+++ b/JN_Dr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,61 @@
     "def plot_d(d):\n",
     "    r = list(range (6,31))\n",
     "    plt.plot(r,d)\n",
+    "    plt.show()\n",
     "\n",
     "d = find_r(text)\n",
     "plot_d(d)\n",
-    "#r=15"
+    "\n",
+    "r=15 #key length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['пабьлхэбтэхмвах', 'ьфаййпяфаарсроп', 'пюдцецупнювигао', 'оцыжащкуоагтчех', 'вэшрнпшфоэъофлт', 'оэухтхныеьипмэх', 'отгймжьпсьъхфлс', 'дшасалдвтмкцуяи', 'вэбсисаричврбни', 'влчйрнцдаыччъдс', 'бэбрммяфесгуиши', 'ташщммябцхчтьес', 'лшхднмяуабзичиз', 'вхаддэофыьэфмгт', 'оыатсщкапюшшязл', 'лбтжрзпртггхъту', 'ытупсжарлмяцуах', 'еькцоийсохжъиас', 'тбадиопввыфуэяк', 'аъюгтпуобхжщънр', 'ижосолщбкаъцчаа', 'тютжнхызпагэъдл', 'люфйзфомачххщож', 'лръдуфуеоягтьаф', 'нхюмайумиэхйьян', 'лшыттйцулшчищеф', 'срххяюуукшжъмрг', 'лрдауиуживснпое', 'тюяытхуоубанруи', 'тягйкчофивсруди', 'врейлгяфврвироу', 'грамзуьоиегъирг', 'зюэжышэвтмжзыор', 'абетяауоуэгфмгх', 'оыпоохстычхуэяк', 'аэыратябоэщкямв', 'дхюдмпызувгффмс', 'пшддлуоеизъщцуб', 'кэызупьмувркмлс', 'сюфсясъвгшмнэкс', 'йчуэищьливгрррц', 'гюшцрмпрврацяйп', 'ытгйммыкаъенълр', 'иъуонмъргаъафтя', 'чвбилжызгюццчеи', 'сабынхэрэвгфязг', 'ншядлшнрбюэффди', 'лрямпхэзрхбнщнс', 'сэуыаторнтжнььи', 'зсшхпхшриыжзътс', 'мзетззуеофиаъйе', 'овхттжрктбфытаф', 'нльцрхчпоягъъмц', 'тшитмпюклбфшсшл', 'взеттхаукюенсвф', 'еубианупечвистс', 'вюдормжзншэщюау', 'иэатгхртаухчъку', 'ащаййуутетххссф', 'ашъеайцнабсцюдс', 'мрлсиьгноягънрг', 'уэыщуиуттэъруми', 'нэбхоьювнпфчъсх', 'нюшжычоиеээнчищ', 'агфмрзщуяугъъвл', 'лшбесщцтытхуоси', 'хцыпьэьдосъмзиц', 'жшаяуфуеоягуячг', 'лшдаоюупьтяыэню', 'мшиттжрвнхжщсни', 'сыыькхъпррчрчоф', 'ьзетофавкэхусгг', 'евадэсхртшмнэкл', 'еашъецаэпючиьер', 'нгсонпсхкюзцьом', 'оэбеыюырпюадуое', 'аыдгошаввшакроп', 'еючмнпхзгюдшсжр', 'иехпалуньжъкуае', 'зпеяйкбтмрвцрнг', 'кюфялхрсоывнэъи', 'дюфсошооацъкмни', 'сбулашбщиыхшякг', 'врыжптьфнгупмнв', 'лрдарчуооэзцшпи', 'ртбсаюоньэгцщат', 'лрамрхрвлрвищях', 'ьсгмгзтхррццгиш', 'чвбеыхыкпаэкслл', 'эвбцсзювйтдцьяз', 'оъатвшавлтгчьоф', 'кгчдвщомоьжуячг', 'ефшжащкдебсеюох', 'зюбуачшгоысамяъ', 'абеажпщюцючыщоу', 'мрюанхсрчхацоен', 'атолвзщвблчуячы', 'еьдпуюозсшадщои', 'уфыжлмыкеягеюоп', 'уфшжуяшвдхаичае', 'схддмзруеззцныо', 'оэжкнхьпачхтмзю', 'врюдпхазлхйцщус', 'бюыорзямуъанхпл', 'люядтмюкаырщюен', 'люцжооткиэжъьуп', 'еэеяицюрчшъфслс', 'чшхулхаюдющксрр', 'ыегччмшвтряосгс', 'ргэсинумвъгъърю', 'хвбпкхррррьвлср', 'яыбхьсомсфъумтя', 'вфбречуооэзщъбф', 'ттшснвъкргяишин', 'сзухтгмжефчищеф', 'слвтмзазршвщцом', 'лшамиийнпыгъщин', 'оьбеононмржъсрл', 'тмххецьжрпщрцои', 'чхячнзбщиычхячн', 'увуочщьпазэхмтя', 'ещвфиящрсмвнэнц', 'лпшхтмяфвхвхъвс', 'дшатчсбрнрбичоъ', 'тюдрокщвблжцювс', 'ршеатчуготхуфся', 'пюятщфцмияентди', 'вбшзохывкювьфсн', 'отупаъштеюаиммц', 'лхехлъсквюзыткс', 'гфущръяфаысхъмц', 'пючфошамуяердлс', 'смвттчбживсщлпс', 'нрдцожззмгчцщгс', 'нпюдекьуувеирое', 'езшфафужатхзщип', 'иэжцычьйдлкыопу', 'озшрофызвюьшмжг', 'лючсасьрнрцгэту', 'огфйдпщвсммъъуп', 'ауыыешшргюжуягл', 'дхьхтйцфеысхъип', 'ехехячнжнхщцэтг', 'тъбжофхвчржъяют', 'оэыратювсягшлжи', 'нштсешьдсхбъмкн', 'аъеттсариегърае', 'аыэурпъзргчищеф', 'срвфисойаыхншуе', 'ыяыпищктещяррлв', 'нюхтйтуутээюзву', 'офшеыйязвягшлдн', 'еяшфвзнтещяиыоо', 'узыпашксрюжъъби', 'згвфеюырйшчищеф', 'срдуосьлнюгъырг', 'вшюдсгэктмяцаес', 'нрхйрфбнабсясри', 'зябпчзявиюцхмрц', 'жшюдчщьуотъшдио', 'агщдсфбаоиэйцук', 'асопаъарчээъитс', 'чэбйкхщкчхжъоор', 'еюфщолцоыеъсьеи', 'кбючгзцйвхаъьиъ', 'евхйрщцкмхубфхф', 'ягайельуоъэпмвг', 'лшюооуывтгенхкг', 'мшчтпхарлъхмсвц', 'шъуеытодыэиорер', 'ачуоаоофьэгкзез', 'обэмитьоаыхъспи', 'рмцтлхрхкгщирее', 'авпхтхщюкюцнэпс', 'лхъсыьтзрхчзщню', 'хшъиетцлтагсоох', 'лшкмехаувюълъдг', 'лмайгхюрдшмиъто', 'изупсжюздъэфэлг', 'свбпюицзмшщньжг', 'лэшцрмгщевршсхр', 'аыбкнпдмаъзцпдг', 'ейшсезючиьхлмвф', 'еубпиякоауэщюрн', 'рхбпафуукюадцоф', 'овшспчцщеьбнщяо', 'оэыщоюупьзхщюод', 'оыпсажввнвхпфяп', 'оыбиокьпеъецшар', 'трцчбпщвеугукбс', 'вэыъсъфвсрубсйф', 'кюгтсщкаофвитдю', 'оэъдгтнпуычамхы', 'аэбфкхсжахшцбок', 'яшаттшбфсвчцоао', 'крэчжмбсоьэхмлс', 'сметглоятшщкъеи', 'щхайвчоидючичит', 'онетмъатопчщюри', 'тшюмкзшеобззэди', 'лрхжсмефосршъдл', 'чебляпывчгчщювс', 'врюхеинчоагаъкф', 'оцупефцапюжустс', 'гюэдкуоепыгъщос', 'тюфйдзщккрящчез', 'ухежыццнеьихмго', 'ачууоцонабсцрнг', 'ичгдбвыюебарныз', 'оьуеытявмъенълл', 'лшиттжпэеугыырг', 'вытвщпчгефрырао', 'обпеыпхгецхъинс', 'ншэцолюхгююхсоф', 'мхюмлшнрсвххъвл', 'тмядгзррзцъумвы', 'еубуочойвыъяисв', 'сэшжоткпижъсюрс', 'йягтбвщунхюццоо', 'озухапшргфхкзши', 'лтшхетьуоюцбфлъ', 'тюбсдмянеуяиыот', 'оаемлпъхщхжъооф', 'вюшзочьжизхрэод', 'рредпхсклмщрфнс', 'пгдцьщьфнхеиэсх', 'ррыжамауяювъьом', 'обедвпщдуяаиюук', 'аэшйцмщхюугшэтя', 'зююттвглееецонл', 'квбмзчоготвргух', 'ьэшлаиуупюяцфлф', 'ябюччзчгыыжишым', 'чвбсифозсвспмуу', 'яфаяйзэнавхкюрс', 'еягйввжвлрвцьмг', 'лмачюшариьгщюьу', 'асосилоиевхтъйн', 'ррдттсцмаъзийфл', 'оядоажавнжгкеищ', 'аъбцочбатагсэли', 'гъууоцьттшароси', 'блбеоящрсмъщчид', 'ыхдпиийтасрхлни', 'оъулатоуьыуйфмс', 'йэупоныкцхютьес', 'лршхлппэнхзцюфг', 'квкцохывнюжрчат', 'офдйрлдзмаъйснн', 'асжиуауеотъшбое', 'нюцтмзсвебарныр', 'евбытхфзсвгтфйл', 'вбвялгеквлюфмгт', 'оцупуружиэжъоер', 'нльфаориичврцож', 'овбуотмгиыяцпдг', 'каштлйутнгащлдс', 'мюьмуйцжеызцгтс', 'ейшжчмювблацшоо', 'офбнкчоуитгстер', 'щшатйхыдпракюан', 'охфйшмыуттгяюоу', 'ачгчшпщсоыгкфнц', 'сюфхтйупнюютьет', 'обесоряфеэррыеу', 'есыпнмъзнмннюрл', 'джуцичоготдшфпг', 'дюэйщмыззряцщчл', 'лбтдмзсхжханюео', 'всжовзщюнюбщшыф', 'лхэщеяцгуфчцьцц', 'табгчщьгыяецроо', 'жшеарзхтуиъхфех', 'аьусальукрьиюьъ', 'тюхцейюзмхвицри', 'оыжкеийнофвршик', 'сшюанмчъиебипое', 'шгяйрзофрююнеер', 'евадстужуоорхди', 'нмэтгложоьгсоок', 'вауцитябуцъъьом', 'паыьлхуеотеншят', 'оыжыащкъоъгъсгс', 'дтбфцзрсрюмншкц', 'дряйнгжзгюмншун', 'рхбпахяфаыэщилл', 'шмчямжзкебфшмзе', 'аыысысюзоыеиувс', 'рюемлсооеэвыкгу', 'оьуиуйфквлкхсоф', 'трютсгыкофвцпоу', 'асусихтпощвичой', 'ншйявшурншдцпид', 'лшбцокыбиьгущим', 'рръзнмрвнэглъмг', 'грэтглоиевецход', 'нргчжпщфеыгщоои', 'гючйсжаклхзхсгс', 'сладнмркнэрсьед', 'еэбобвщхтюдусне', 'брчаешювсяаиоли', 'нэорзхщртюбисмц', 'вабцкчурлчхщянц', 'льупефкмуошуфнв', 'нгсцаищкчъищюри', 'мпдпойооиэхмсюф', 'ьяюдтзтрсвхъъчр', 'аэуиошшвзрздгтс', 'каштлхезнмжтърс', 'ррдоажщуятжцрев', 'нэбрилоиеяерщеф', 'ибэчппазлмвыкжи', 'рвхчнзонтренфшх', 'аачтэщьеофвзшаж', 'нхжеитыкофвцпоу', 'есшскзцпеяецэтс', 'рхфйнсовчыъхмоз', 'нюцтиоявмлкршер', 'ивощрхтрвшбчсрл', 'ихцтсхпуттъхщож', 'ооаяйдгфавгосви', 'дмвфиььжиыжзцри', 'оыжфоляфвхвхфкс', 'мшхтттцщихгъэвс', 'еубттэосеаъмщип', 'ншкймфусрючрщио', 'спатунупизълъни', 'лмъгбвщрпюдшмвл', 'тмшхлпхвррьшяши', 'нэонхмжкбшифсрь', 'вышснвгтасгкцри', 'оыятгоослрзрюье', 'ыъжууицлсвчцьад', 'атчфейызмиифсри', 'сзыцатьуььъуцип', 'пашхтъэнеээншкс', 'тюгтецюкррчхфвг', 'людакцьтчхмытож', 'ошячщмяфврзцэми', 'рвпхыфофрююхспу', 'обемлийзмгвруан', 'аъыйдмыюгшбцчоз', 'ощядгйьйнхвиоиз', 'еыгтдпевдюяцщцг', 'стбмхлызйриощер', 'атыиещкфонзцючи', 'люхйкъъзлъхтщин', 'тючфукьлснзцпоз', 'нпефорфклющхъйх', 'оыпооууутмушмзц', 'мхшцсжьпнхцшъсл', 'лбтжлхпрвгуиюан', 'увгтйфугыыщыьан', 'оьыуофцоаымъъсн', 'рхбпоууоуэъългг', 'тмдгофцучхьрушц', 'мхгдпхефиэхъьиз', 'цреалмапоъглрае', 'еаачлшнпешькссх', 'нюциемсрнюжрчоф', 'тююакхщзтэгксрр', 'уыдгофбиереэфмг', 'гюямоюупьсрщюрс', 'зраглийнохбнэтс', 'паыммцутавгшэкс', 'мфхтрмэтиьъшщок', 'аубидхуеотгпорг', 'щхамясюзоыьищяо', 'пюдцвмючотвцпоп', 'ауумтчьлнхбнрли', 'нэбурпыблбфрщту', 'иубжащксывхзэьт', 'офдмдмаюблчасгс', 'паыгтмщбавъчсря', 'срятгххвкыфъъгс', 'ваузайяфрхмился', 'всуьнмсклмщрфку', 'еююмтчьллоцнунс', 'ррдолзыкврарэьт', 'рпкдззввлмнроып', 'игюябсооиччньир', 'ыхбхкзщэвюькьаь', 'апдажмтрмююцщир', 'еьшилмыпояерщип', 'аыыхьшатошздцок', 'ншчфукэтовэкррц', 'грбхоиупнюжъмрг', 'лбтцрхчйафчирцг', 'тмюйтсюзоыичьиы', 'людапчцмоэмрюьф', 'тююакхывеьвгбуд', 'ищйытхцйншкфъжр', 'осопошвррьэшъвг', 'тмайбхщюшгуиьмл', 'юбгйдпыкхягчмдг', 'лшдасзъэеахпщыи', 'ттуфихарблмхзхо', 'юфшндхърггонэте', 'еэаяхлуооэгкъсс', 'бхасозюфофирмрх', 'еаумдъхвпюбхфлф', 'ячбрххшрбциъцои', 'сгмйсщррпюкцтеи', 'нрылучьжотххщож', 'оъупьуотаахпшеу', 'оьдыещйтеежуънс', 'вябхтзрнеэвгбду', 'ууаддчбеаъхтяжх', 'рюсчдзщрсмщцпое', 'оаыцьшнуэвэфшор', 'свгтмфукзтъщюнс', 'нюхурхжноьшцрус', 'нтоуотхкзхчььах', 'ашдчхпъсувъфроы', 'еычтсзъргюишмгл', 'грацбпщуяюяшспс', 'сваяешазнлдцгтл', 'дтбйсъаркягтмку', 'еююуотцдаыълъсс', 'тэтричойргнрюео', 'ьэощззшнявэсюоъ', 'тюхоофдзкювюъвс', 'свупошкртзимъвл', 'щрятжфьгыыгпмпл', 'хэжцьйжмавиуцу']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def y_to_blocks(y):\n",
+    "    y_blocks = []\n",
+    "    for i in range(0, len(y), r):\n",
+    "        y_i = y[i : i+r]\n",
+    "        y_blocks.append(y_i)\n",
+    "    return y_blocks     \n",
+    "\n",
+    "Y = y_to_blocks(text) #ciphertext divided into blocks length=15\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'def', 'ghi', 'jkl', 'mno', 'pqr', 'stu', 'v']\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = \"abcdefghijklmnopqrstuv\"\n",
+    "t = []\n",
+    "for i in range (0, len(s), 3):\n",
+    "    k_i = s[i : i+3]\n",
+    "    t.append(k_i)\n",
+    "    \n",
+    "print(t)"
    ]
   },
   {
@@ -72,35 +123,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "f = open(r'C:\\Users\\Alex\\MARGO\\crypto_labs\\lab2\\var7_1.txt', 'r', encoding='utf8', errors='ignore')\n",
-    "text = f.read()\n",
-    "f.close()\n",
-    "\n",
-    "\n",
-    "def find_r(y):\n",
-    "    a = []\n",
-    "    for r in range(6, 31):\n",
-    "        d_r = 0\n",
-    "        for i in range(1, len(y) - r):\n",
-    "            if y[i] == y[i + r]:\n",
-    "                d_r += 1\n",
-    "        a.append(d_r)\n",
-    "    print(\"d=\", a)\n",
-    "    return a\n",
-    "\n",
-    "\n",
-    "def plot_d(d):\n",
-    "    r = list(range(6, 31))\n",
-    "    plt.plot(r, d)\n",
-    "    plt.show()\n",
-    "\n",
-    "\n",
-    "d = find_r(text)\n",
-    "plot_d(d)\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
