letter frequencies in block + most frequent letter

--- a/JN_Dr.ipynb
+++ b/JN_Dr.ipynb
@@ -71,7 +71,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_let_ind= [14, 30, 1, 18, 14, 21, 19, 16, 14, 30, 3, 22, 26, 14, 17]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def y_to_blocks(y):\n",
+    "    y_blocks = []\n",
+    "    for i in range(0, r):\n",
+    "        y_i = y[i:: r]\n",
+    "        y_blocks.append(y_i)\n",
+    "    return y_blocks     \n",
+    "\n",
+    "ru_alph = ['а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й','к', 'л', 'м', 'н', 'о', 'п',\n",
+    "           'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ','ы', 'ь', 'э', 'ю', 'я']\n",
+    "\n",
+    "Y = y_to_blocks(text) #ciphertext divided into blocks of symbols with step r\n",
+    "\n",
+    "def letter_freqs(y):\n",
+    "    fr = []\n",
+    "    for j in range(len(Y)):\n",
+    "        fr_j = []\n",
+    "        for i in range(0,32):\n",
+    "            fr_j.append(Y[j].count(ru_alph[i]))\n",
+    "        fr.append(fr_j)\n",
+    "    return fr\n",
+    "\n",
+    "freqs = letter_freqs(Y) #freqs of letters of block\n",
+    "\n",
+    "def find_most_freq(fr):\n",
+    "    max_let = []  #indexes of most frequent letters of the block\n",
+    "    for i in range(len(fr)): \n",
+    "        max_let.append(freqs[i].index(max(fr[i])))\n",
+    "    return max_let\n",
+    "\n",
+    "most_freq = find_most_freq(freqs) #indexes of most frequent letters of the block\n",
+    "print(\"max_let_ind=\",most_freq)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -80,42 +127,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['пабьлхэбтэхмвах', 'ьфаййпяфаарсроп', 'пюдцецупнювигао', 'оцыжащкуоагтчех', 'вэшрнпшфоэъофлт', 'оэухтхныеьипмэх', 'отгймжьпсьъхфлс', 'дшасалдвтмкцуяи', 'вэбсисаричврбни', 'влчйрнцдаыччъдс', 'бэбрммяфесгуиши', 'ташщммябцхчтьес', 'лшхднмяуабзичиз', 'вхаддэофыьэфмгт', 'оыатсщкапюшшязл', 'лбтжрзпртггхъту', 'ытупсжарлмяцуах', 'еькцоийсохжъиас', 'тбадиопввыфуэяк', 'аъюгтпуобхжщънр', 'ижосолщбкаъцчаа', 'тютжнхызпагэъдл', 'люфйзфомачххщож', 'лръдуфуеоягтьаф', 'нхюмайумиэхйьян', 'лшыттйцулшчищеф', 'срххяюуукшжъмрг', 'лрдауиуживснпое', 'тюяытхуоубанруи', 'тягйкчофивсруди', 'врейлгяфврвироу', 'грамзуьоиегъирг', 'зюэжышэвтмжзыор', 'абетяауоуэгфмгх', 'оыпоохстычхуэяк', 'аэыратябоэщкямв', 'дхюдмпызувгффмс', 'пшддлуоеизъщцуб', 'кэызупьмувркмлс', 'сюфсясъвгшмнэкс', 'йчуэищьливгрррц', 'гюшцрмпрврацяйп', 'ытгйммыкаъенълр', 'иъуонмъргаъафтя', 'чвбилжызгюццчеи', 'сабынхэрэвгфязг', 'ншядлшнрбюэффди', 'лрямпхэзрхбнщнс', 'сэуыаторнтжнььи', 'зсшхпхшриыжзътс', 'мзетззуеофиаъйе', 'овхттжрктбфытаф', 'нльцрхчпоягъъмц', 'тшитмпюклбфшсшл', 'взеттхаукюенсвф', 'еубианупечвистс', 'вюдормжзншэщюау', 'иэатгхртаухчъку', 'ащаййуутетххссф', 'ашъеайцнабсцюдс', 'мрлсиьгноягънрг', 'уэыщуиуттэъруми', 'нэбхоьювнпфчъсх', 'нюшжычоиеээнчищ', 'агфмрзщуяугъъвл', 'лшбесщцтытхуоси', 'хцыпьэьдосъмзиц', 'жшаяуфуеоягуячг', 'лшдаоюупьтяыэню', 'мшиттжрвнхжщсни', 'сыыькхъпррчрчоф', 'ьзетофавкэхусгг', 'евадэсхртшмнэкл', 'еашъецаэпючиьер', 'нгсонпсхкюзцьом', 'оэбеыюырпюадуое', 'аыдгошаввшакроп', 'еючмнпхзгюдшсжр', 'иехпалуньжъкуае', 'зпеяйкбтмрвцрнг', 'кюфялхрсоывнэъи', 'дюфсошооацъкмни', 'сбулашбщиыхшякг', 'врыжптьфнгупмнв', 'лрдарчуооэзцшпи', 'ртбсаюоньэгцщат', 'лрамрхрвлрвищях', 'ьсгмгзтхррццгиш', 'чвбеыхыкпаэкслл', 'эвбцсзювйтдцьяз', 'оъатвшавлтгчьоф', 'кгчдвщомоьжуячг', 'ефшжащкдебсеюох', 'зюбуачшгоысамяъ', 'абеажпщюцючыщоу', 'мрюанхсрчхацоен', 'атолвзщвблчуячы', 'еьдпуюозсшадщои', 'уфыжлмыкеягеюоп', 'уфшжуяшвдхаичае', 'схддмзруеззцныо', 'оэжкнхьпачхтмзю', 'врюдпхазлхйцщус', 'бюыорзямуъанхпл', 'люядтмюкаырщюен', 'люцжооткиэжъьуп', 'еэеяицюрчшъфслс', 'чшхулхаюдющксрр', 'ыегччмшвтряосгс', 'ргэсинумвъгъърю', 'хвбпкхррррьвлср', 'яыбхьсомсфъумтя', 'вфбречуооэзщъбф', 'ттшснвъкргяишин', 'сзухтгмжефчищеф', 'слвтмзазршвщцом', 'лшамиийнпыгъщин', 'оьбеононмржъсрл', 'тмххецьжрпщрцои', 'чхячнзбщиычхячн', 'увуочщьпазэхмтя', 'ещвфиящрсмвнэнц', 'лпшхтмяфвхвхъвс', 'дшатчсбрнрбичоъ', 'тюдрокщвблжцювс', 'ршеатчуготхуфся', 'пюятщфцмияентди', 'вбшзохывкювьфсн', 'отупаъштеюаиммц', 'лхехлъсквюзыткс', 'гфущръяфаысхъмц', 'пючфошамуяердлс', 'смвттчбживсщлпс', 'нрдцожззмгчцщгс', 'нпюдекьуувеирое', 'езшфафужатхзщип', 'иэжцычьйдлкыопу', 'озшрофызвюьшмжг', 'лючсасьрнрцгэту', 'огфйдпщвсммъъуп', 'ауыыешшргюжуягл', 'дхьхтйцфеысхъип', 'ехехячнжнхщцэтг', 'тъбжофхвчржъяют', 'оэыратювсягшлжи', 'нштсешьдсхбъмкн', 'аъеттсариегърае', 'аыэурпъзргчищеф', 'срвфисойаыхншуе', 'ыяыпищктещяррлв', 'нюхтйтуутээюзву', 'офшеыйязвягшлдн', 'еяшфвзнтещяиыоо', 'узыпашксрюжъъби', 'згвфеюырйшчищеф', 'срдуосьлнюгъырг', 'вшюдсгэктмяцаес', 'нрхйрфбнабсясри', 'зябпчзявиюцхмрц', 'жшюдчщьуотъшдио', 'агщдсфбаоиэйцук', 'асопаъарчээъитс', 'чэбйкхщкчхжъоор', 'еюфщолцоыеъсьеи', 'кбючгзцйвхаъьиъ', 'евхйрщцкмхубфхф', 'ягайельуоъэпмвг', 'лшюооуывтгенхкг', 'мшчтпхарлъхмсвц', 'шъуеытодыэиорер', 'ачуоаоофьэгкзез', 'обэмитьоаыхъспи', 'рмцтлхрхкгщирее', 'авпхтхщюкюцнэпс', 'лхъсыьтзрхчзщню', 'хшъиетцлтагсоох', 'лшкмехаувюълъдг', 'лмайгхюрдшмиъто', 'изупсжюздъэфэлг', 'свбпюицзмшщньжг', 'лэшцрмгщевршсхр', 'аыбкнпдмаъзцпдг', 'ейшсезючиьхлмвф', 'еубпиякоауэщюрн', 'рхбпафуукюадцоф', 'овшспчцщеьбнщяо', 'оэыщоюупьзхщюод', 'оыпсажввнвхпфяп', 'оыбиокьпеъецшар', 'трцчбпщвеугукбс', 'вэыъсъфвсрубсйф', 'кюгтсщкаофвитдю', 'оэъдгтнпуычамхы', 'аэбфкхсжахшцбок', 'яшаттшбфсвчцоао', 'крэчжмбсоьэхмлс', 'сметглоятшщкъеи', 'щхайвчоидючичит', 'онетмъатопчщюри', 'тшюмкзшеобззэди', 'лрхжсмефосршъдл', 'чебляпывчгчщювс', 'врюхеинчоагаъкф', 'оцупефцапюжустс', 'гюэдкуоепыгъщос', 'тюфйдзщккрящчез', 'ухежыццнеьихмго', 'ачууоцонабсцрнг', 'ичгдбвыюебарныз', 'оьуеытявмъенълл', 'лшиттжпэеугыырг', 'вытвщпчгефрырао', 'обпеыпхгецхъинс', 'ншэцолюхгююхсоф', 'мхюмлшнрсвххъвл', 'тмядгзррзцъумвы', 'еубуочойвыъяисв', 'сэшжоткпижъсюрс', 'йягтбвщунхюццоо', 'озухапшргфхкзши', 'лтшхетьуоюцбфлъ', 'тюбсдмянеуяиыот', 'оаемлпъхщхжъооф', 'вюшзочьжизхрэод', 'рредпхсклмщрфнс', 'пгдцьщьфнхеиэсх', 'ррыжамауяювъьом', 'обедвпщдуяаиюук', 'аэшйцмщхюугшэтя', 'зююттвглееецонл', 'квбмзчоготвргух', 'ьэшлаиуупюяцфлф', 'ябюччзчгыыжишым', 'чвбсифозсвспмуу', 'яфаяйзэнавхкюрс', 'еягйввжвлрвцьмг', 'лмачюшариьгщюьу', 'асосилоиевхтъйн', 'ррдттсцмаъзийфл', 'оядоажавнжгкеищ', 'аъбцочбатагсэли', 'гъууоцьттшароси', 'блбеоящрсмъщчид', 'ыхдпиийтасрхлни', 'оъулатоуьыуйфмс', 'йэупоныкцхютьес', 'лршхлппэнхзцюфг', 'квкцохывнюжрчат', 'офдйрлдзмаъйснн', 'асжиуауеотъшбое', 'нюцтмзсвебарныр', 'евбытхфзсвгтфйл', 'вбвялгеквлюфмгт', 'оцупуружиэжъоер', 'нльфаориичврцож', 'овбуотмгиыяцпдг', 'каштлйутнгащлдс', 'мюьмуйцжеызцгтс', 'ейшжчмювблацшоо', 'офбнкчоуитгстер', 'щшатйхыдпракюан', 'охфйшмыуттгяюоу', 'ачгчшпщсоыгкфнц', 'сюфхтйупнюютьет', 'обесоряфеэррыеу', 'есыпнмъзнмннюрл', 'джуцичоготдшфпг', 'дюэйщмыззряцщчл', 'лбтдмзсхжханюео', 'всжовзщюнюбщшыф', 'лхэщеяцгуфчцьцц', 'табгчщьгыяецроо', 'жшеарзхтуиъхфех', 'аьусальукрьиюьъ', 'тюхцейюзмхвицри', 'оыжкеийнофвршик', 'сшюанмчъиебипое', 'шгяйрзофрююнеер', 'евадстужуоорхди', 'нмэтгложоьгсоок', 'вауцитябуцъъьом', 'паыьлхуеотеншят', 'оыжыащкъоъгъсгс', 'дтбфцзрсрюмншкц', 'дряйнгжзгюмншун', 'рхбпахяфаыэщилл', 'шмчямжзкебфшмзе', 'аыысысюзоыеиувс', 'рюемлсооеэвыкгу', 'оьуиуйфквлкхсоф', 'трютсгыкофвцпоу', 'асусихтпощвичой', 'ншйявшурншдцпид', 'лшбцокыбиьгущим', 'рръзнмрвнэглъмг', 'грэтглоиевецход', 'нргчжпщфеыгщоои', 'гючйсжаклхзхсгс', 'сладнмркнэрсьед', 'еэбобвщхтюдусне', 'брчаешювсяаиоли', 'нэорзхщртюбисмц', 'вабцкчурлчхщянц', 'льупефкмуошуфнв', 'нгсцаищкчъищюри', 'мпдпойооиэхмсюф', 'ьяюдтзтрсвхъъчр', 'аэуиошшвзрздгтс', 'каштлхезнмжтърс', 'ррдоажщуятжцрев', 'нэбрилоиеяерщеф', 'ибэчппазлмвыкжи', 'рвхчнзонтренфшх', 'аачтэщьеофвзшаж', 'нхжеитыкофвцпоу', 'есшскзцпеяецэтс', 'рхфйнсовчыъхмоз', 'нюцтиоявмлкршер', 'ивощрхтрвшбчсрл', 'ихцтсхпуттъхщож', 'ооаяйдгфавгосви', 'дмвфиььжиыжзцри', 'оыжфоляфвхвхфкс', 'мшхтттцщихгъэвс', 'еубттэосеаъмщип', 'ншкймфусрючрщио', 'спатунупизълъни', 'лмъгбвщрпюдшмвл', 'тмшхлпхвррьшяши', 'нэонхмжкбшифсрь', 'вышснвгтасгкцри', 'оыятгоослрзрюье', 'ыъжууицлсвчцьад', 'атчфейызмиифсри', 'сзыцатьуььъуцип', 'пашхтъэнеээншкс', 'тюгтецюкррчхфвг', 'людакцьтчхмытож', 'ошячщмяфврзцэми', 'рвпхыфофрююхспу', 'обемлийзмгвруан', 'аъыйдмыюгшбцчоз', 'ощядгйьйнхвиоиз', 'еыгтдпевдюяцщцг', 'стбмхлызйриощер', 'атыиещкфонзцючи', 'люхйкъъзлъхтщин', 'тючфукьлснзцпоз', 'нпефорфклющхъйх', 'оыпооууутмушмзц', 'мхшцсжьпнхцшъсл', 'лбтжлхпрвгуиюан', 'увгтйфугыыщыьан', 'оьыуофцоаымъъсн', 'рхбпоууоуэъългг', 'тмдгофцучхьрушц', 'мхгдпхефиэхъьиз', 'цреалмапоъглрае', 'еаачлшнпешькссх', 'нюциемсрнюжрчоф', 'тююакхщзтэгксрр', 'уыдгофбиереэфмг', 'гюямоюупьсрщюрс', 'зраглийнохбнэтс', 'паыммцутавгшэкс', 'мфхтрмэтиьъшщок', 'аубидхуеотгпорг', 'щхамясюзоыьищяо', 'пюдцвмючотвцпоп', 'ауумтчьлнхбнрли', 'нэбурпыблбфрщту', 'иубжащксывхзэьт', 'офдмдмаюблчасгс', 'паыгтмщбавъчсря', 'срятгххвкыфъъгс', 'ваузайяфрхмился', 'всуьнмсклмщрфку', 'еююмтчьллоцнунс', 'ррдолзыкврарэьт', 'рпкдззввлмнроып', 'игюябсооиччньир', 'ыхбхкзщэвюькьаь', 'апдажмтрмююцщир', 'еьшилмыпояерщип', 'аыыхьшатошздцок', 'ншчфукэтовэкррц', 'грбхоиупнюжъмрг', 'лбтцрхчйафчирцг', 'тмюйтсюзоыичьиы', 'людапчцмоэмрюьф', 'тююакхывеьвгбуд', 'ищйытхцйншкфъжр', 'осопошвррьэшъвг', 'тмайбхщюшгуиьмл', 'юбгйдпыкхягчмдг', 'лшдасзъэеахпщыи', 'ттуфихарблмхзхо', 'юфшндхърггонэте', 'еэаяхлуооэгкъсс', 'бхасозюфофирмрх', 'еаумдъхвпюбхфлф', 'ячбрххшрбциъцои', 'сгмйсщррпюкцтеи', 'нрылучьжотххщож', 'оъупьуотаахпшеу', 'оьдыещйтеежуънс', 'вябхтзрнеэвгбду', 'ууаддчбеаъхтяжх', 'рюсчдзщрсмщцпое', 'оаыцьшнуэвэфшор', 'свгтмфукзтъщюнс', 'нюхурхжноьшцрус', 'нтоуотхкзхчььах', 'ашдчхпъсувъфроы', 'еычтсзъргюишмгл', 'грацбпщуяюяшспс', 'сваяешазнлдцгтл', 'дтбйсъаркягтмку', 'еююуотцдаыълъсс', 'тэтричойргнрюео', 'ьэощззшнявэсюоъ', 'тюхоофдзкювюъвс', 'свупошкртзимъвл', 'щрятжфьгыыгпмпл', 'хэжцьйжмавиуцу']\n"
+      "['пьповоодввбтлволыетаитллнлслттвгзаоадпксйгыичснлсзмонтвевиаамунналхжлмсьееноаеизкдсвлрльчэокезамаеуусовбллечырхявтсслотчуелдтрпволгпсннеиолоадетонаасыноеузсвнзжаачекеялмшаоралхллислаеероооотвкоаяксщотлчвогтуаиолвонмтесйолтоврпроазкьячяелароагбыойлкоаневонокмеощоасоеддлвлтжатосшенвподдршаротанлргнгсебнвлнмьакрниранернииодоменслтнвоыасптлороаоесалтномлуортмцентугзпмащпаниопсвверриыаеанглтлтиотюлтюебеясноовуросннаегсдетьтсщх', 'афюцээтшэлэашхыбтьбъжююрхшррюяррюбыэхшэючютъвашрэсзвлшзуюэщшрээюгшцшшшызвагэыюепююбрртрсввъгфюбртьффхэрюююэшегвыфтзлшьмхвщпшюшюбтхфюмрпзэзюгуххъэшъыряюфязгршряшгсэюбвгшшъчбмвхшшмзвэыйухвэыырэюээшрмхншрерцююхччьшыбшхмуэязтюаюргрбэювэбвфямсряъълхъэрвфсювбцлваюйфшхчюбсжюбсхашьюышгвмааытрхмыюьрсшшрррюлэрэаьгпяэарэбвахсхювхомышушпммэыыътзаююшвбъщыттююпыхбвьхмхраююыюрафухюуэуфарасюрпгхпьышрбмюющсмбштфэхачгръьяуюавютшырвтюээюврэ', 'бадышугабчбшхаатукаюотфъюыхдягеаэепыюдыфушгуббяяушехьиебдааълыбшфбыадиыеашсбдчхеффуыдбагббачшбеюодышджюыяцехгэбббшувабхяувшадеяшуеучвдюшжшчфыьебытеэвыхшшывдюхбющобфюхаючууэцпъъкаубшбшббшыпбцыгъбаэеаеюхбюуэфеугуитпэюябшгушбешедыешюбшюбагаоддбубдуушкджцбвуьбшьшбафгфеыуэтжэбеухжюяаэуыжбябчыеуюуйбъэгчабчобусдюушдбэхчжшфцоцавжхбкаъшошяжчышгдяпеыягбыхчепштгыбдгеацюдяаыхбадуббдыяууюдкюбдшычбтюдюйоагдушааубмыудбасыгходчаабютохуяж', 'ьйцжрхйссйрщддтжпцдгсжйдмтхаыйймжторддзсэцйоиыдмыхттцттиотйесщхжмепяатьтдъоегмпяяслжасммецтджуаалпжждкдоджяучспхрсхтмехчофхтратзпхщфтцдфцрсйыххжрстуфптефпфудйпддпйщчййотеомтхсимйппцксппсщсичътдфтчтйтмжлхпдйжудетвецмдужтххсмздцждйтмлчсяйчстоцуеплпхцйитыяпфутмжнтйчхспцйдощгасцкайдтцьыфйпясмитсяцзтчйдоарцпцпдиторччтесйтщтяффттйтгхнстуфцхтачхмйдтмийффоцжтупгдачиагмгмтимцмужмгтзьмодяхаихфхцйааыпййафнясмрйлпыхдчцтуучтцяйурщоптц', 'лйеантмаирммндсрсоитонзуатяутклзыяоамлуяирмнлнлпапзтрмтаргйаиуоырсьуоткоэеныонайлоапраргысвваажнвулумнпртоилчикьентмиоенчитчотщоалротоеаыоадетяоаетриийываеосрччсакогреопыаилтыеегсюрнеиапоаобссгктжгвмксяеекдыобытщыолгообаедлопьавцтзачийвюитаоооиаолорумтлуаолучкйшштонищмвечраеенрсгилацнамылусивонгжснбезкеаотолаипнэикнирсйиоттмублхнгуеатекщылдгдхекуоослйооопллекоолмрдявтрадтгантлзбкжльуортпктобдсидходхсуьетддьмрохсбесоизоожь', 'хпцщпхжлснмммэщзжиоплхффййюихчгушахтпупсщмммжхшхтхзжхпхнмхуйьиьчзщэфюжхфсцпюшплкхшштчюхзхзшщщчпхзюмязххзмоцхмнхсчвгзинцзщямскчфхъъъшчжкфчфспшйчфтшспсщтйзшюсгфзщфъхлзщлухтотххьтххжимпзяфчюжкпъщтхшмлчъзмпифузццвтжпплшзчтвптмпчхщмпмвчизфзвшлсжчцяитнпхлазхгротйймчхмпйрмчмззящзлйимзтлтхщзгхжссйгхшкмлпжмвшхчфийзшхжлпзщтзсоххдьлтэфнвпмвоийтъццмфимйплщъкружхффуфхмшмхфюицмхсмчпщммхймчззсзммшкихсчххшхпзххлзъхщчущзчзшфхтпзпшътчзфшфй', 'эяукшньдацяяяокпайпущыоууцуууояьэусяыоьъьпыъыэнэошурчюаужруцгуюощцьууръахасыахубробьуортыюаокшщсщоышрьаяютюашуроуъмайоьбьщябщуцышсяабзьуьыьщшцнхюьаъокуянкыьэбяьбащцццьыаооьрщтцаююцгдюкуцувьщфкнсббооашеынцощцоыяпчхюнрокщшьяъьсьащщгоучоэжаоцабьщйоыпыдусфеурмуцюоыыщуяъоысщцьхьюйчоуояукржязюофытуырощарщющукщотшещоаоьыцоятпгьяцоуущхжгоцыьэюьяойыьеыкъьфуьпуцуцеансщбуйуэуююьыкащхясьывощтыаэучюцыцвщыъаъуюхшрьойрбщнужхъъщаацошдкьж', 'бфпуфыпврдфбуфаррсвобзмемуужоффовотбземвлркрзррзррекпкупзттннтвиутдепвпврэхрвзнтсощфонвхкввмдгюрвзквупзмккрювмрмокжзннжщпрфрвгмвткфмжзужйзрврфжввдрзйтузтсрлкнвуаркойкуврдфохюзлурззщмчоущпвпввапжфсяитефвчаекннювэггхррйпурунхжкфудхлгугзнвримватртукэвзевзкжигтжвудуспфзгзхюггтузнъфжжбеъсзфкзоккпрбвифккхвррмкорвзуизнекпввруфжфщсспрвктслзунктффзюйвзфзлкупргооуфппрзипнттезчлбсюбвфклквоэрпттпйзмвйрюкэррофврржттнерукнксрузрдйнзргм', 'танооестиаецаыптловбкпаоилкиуивитуыоуиугиваггэбрниотолкенаеаотнеяыооьнрктпкпвгьмоаиноьлрпйлоеоцчбседеалуаичдтврсорерпмриасвнбоикевауимуадвнсгенчссираетверйнтаиооччывмотлыьаккртвддмеаиакеьнеесоуасотдооочоппкеаемееегсзвингоещилняуюеопысалиеанттсаьцннмоесвииинебиптоненозжнуыукмоируоуооргаеоевоонинеелнтстлучисзняелтооечмвтаивиерипрбалсмьерчврмгндйолслтнвыаучиоентеьоаиооонлыбакрллвливмооонаооенршхебгоопбпоаееасэзозугянкаряктыа', 'эаюаэььмчысхбьюгмхыхаачяэшшвбвремэчэвзвшвръаювюхтыфбябючшутбяэпэутсятхрэшюююшюжрыцыгээрраттьбыюхлшяхзчхъыэшюрърфэгфшырпызмхрлтяюююыявгвтлюрмюыхряхегыщэящюшюмбютиэхеххъгъээыгюхаюшъшвъьуюьзвъурфыхвьшюпбсгаюырьббъуфцювцыжхфюухзмхюяуетюывврьвъжашмсыххюатбвлэчыгылтртыюэмтрхюфяирхфеюоьцтъююыбыэлфщшьэвыхэюяючоъэврмтямрффяылштвыххаюзюршсрвиьэрхрюгшхюрнънюмхгыыэхэъшюэрсхвьтытхбвлвыхмормчююяшвюфыэьшьгяалгэфюцютаеэъмвтьхвююляыгвюзыв', 'хрвгъиъквчгчзэшгяжфжъгхгхчжсасвгжгхщгърмгаеъцгэбжжифгфевэххсгъфэгхъгяжчхмчзаадъввъхузгвцэдгжссчачагазхйаржъщягьъзячвгжщчэввбжхевазсесчехкьцмжсщжгбгчхяэгяжчгясцъээжъауэехигхщцчгъмэщрзхэабххегувчшчэщччзрчгжгяисаегрхюхъъъюхцяжхщевагевяжсхвгхзггаъруюзжъъагюжвяазагаггюрндяабчеъьввбюогъегммэфевкввдггегзрдабхшиххзжжевеввеъкбъгжвгъчъдьигзчиъэчмзювбвяизхзщуцущмъьхгьжгербгъгьвбфхчъфмщцанчьюезэжчимвкэугхмогибикххжвхщэъшчъиядгънэвиги', 'мситопхцрчутифшхцъущцэхтйиъннриъзфукфщкнрцнацффннзаыъшнищчхцърчнъумуыщруницдкшкцнкшпццицкцчуеаыцудеицтцнщъфкоъвущиищъърххнхицуньиыхрщцизышгъухцъшъъинрюшиъиъцяхшйъъсъбпнмокъинзслифншцлщднщпцубиаццхкищзшщауъщхцрныыъххуясцкбиърриъишцрципкцщтиксрщхйтцрйшртфърцщццскяктрншцнщццхииринрсънъннщшиыхцицулцщхсуиищущмъдтцрынзццхрчхозхъмрлшшфкрцфунхыцхрцицоцтцхшшиыъърълкркэщншшпицнрзачъирнррнкцрдкъичргфшичпхнкрхъцхпугтцфщцьфшшцтлрсюмпу', 'вргчфмфубъиьчмяъуиэъчъщььщмпруриымэяфцмэряъфчяфщьъътъсссюъсюнуъчъозяэсчсэььурсурэмямшщщгсььяюмщоящючнмщхюьсссълмъшщцщсцямэъчюфтфмтъдлщрщомэъяъэялмрщшрзлыъщыасмдциоььфмхсрзсрэщоъъэьспмюцщюфшкстмбомъчюэъюъсщчмрнъырисъмиюцзфыоэфэьюэогфшмюьюъйеэочлфьючсбнфмоцплгштююфьыюфщюшьрфюцшпехоьшсшшимукспчпщъхосьсосяфюсъгърщкфшпэмшсщсцфэщщъмясцюьсцшфтэсучощщющпъмъюьълуьрсчсфюээщощпрщэссълфуэоььщщцрмрьюбъъьмщзэъмфцтщшъбяпшюрьрмсгмъююъъмц', 'аоаелэляндшеигзтааянадоаяероудорогяммулкрйлтездньтйамшвтаксдрмсивсичнногкеооожанънкнпаяиляочояоечооаызупеулргрстбиеоирочтнвовсдсмкмлпгоипжтугитюжкаеулвдоберерриутоеихвквеепепнодтлжхдврояояабйдхоалеирддвктоегнылрановвсрошлооонсоутнулыурмьйфилсинмефаноыйгеоддтоеаонеерпчеыцоеьриоедооягкулзвгоооиимоогенлмннрючтреежшаотоероврквиинвшррьариквомпаоицечиойзсаасгшиасормрткоряолтьгргскньыиаииоррциьужвмдыхтсрлоеоенджоонуаогптксеоввпу', 'хпохтхсиисисзтлухскралжфнфгеииугрхквсбссцпряигисисефцлфсууфсгихщлицгюифглрмепрегиигвитхшлзфгхъуныипеоюслнпсрсюряфнфмнлиняцсъсяинцсцсссепугуплпгтинефевуноифгсицоксриъфггцрзиесюхгоггргфнфодпрсфюыкоситиилсфссзогзлгосфлывсоиътфдсхмкялхфмусгунлщиидиссгтнерлтржгссорнуцтулглофцохъикерикмтсцнлесуфуйдмгдисдеиццвифрссвфихжусзрлжиисспоилиьиедипсгжиунззгринзхцлнннгцзехфргссскгопиутсясяустпрьрпкцггыфдрглгиоесхфиижусухерссхылслусоъслл']\n",
+      "425\n",
+      "32\n",
+      "1184\n"
      ]
     }
    ],
    "source": [
-    "def y_to_blocks(y):\n",
-    "    y_blocks = []\n",
-    "    for i in range(0, len(y), r):\n",
-    "        y_i = y[i : i+r]\n",
-    "        y_blocks.append(y_i)\n",
-    "    return y_blocks     \n",
-    "\n",
-    "Y = y_to_blocks(text) #ciphertext divided into blocks length=15\n"
+    "print(Y)\n",
+    "print(len(Y[0]))\n",
+    "print(len(block_freqs[0]))\n",
+    "m = 0\n",
+    "for i in range (len(block_freqs[0])):\n",
+    "    m = m + int(block_freqs[0][i])\n",
+    "print(m)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['abc', 'def', 'ghi', 'jkl', 'mno', 'pqr', 'stu', 'v']\n"
+      "['adgjmpsv', 'behknqt', 'cfiloru']\n",
+      "[37, 5, 24, 10, 11, 33, 3, 8, 13, 3, 10, 38, 12, 31, 52, 11, 19, 26, 29, 9, 0, 4, 1, 7, 3, 4, 0, 7, 6, 1, 2, 6]\n"
      ]
     }
    ],
    "source": [
     "s = \"abcdefghijklmnopqrstuv\"\n",
     "t = []\n",
-    "for i in range (0, len(s), 3):\n",
-    "    k_i = s[i : i+3]\n",
+    "for i in range (0, 3):\n",
+    "    k_i = s[i:: 3]\n",
     "    t.append(k_i)\n",
     "    \n",
-    "print(t)"
+    "print(t)\n",
+    "ru_alph = ['а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й','к', 'л', 'м', 'н', 'о', 'п',\n",
+    "           'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ','ы', 'ь', 'э', 'ю', 'я']\n",
+    "\n",
+    "def Convert(string): \n",
+    "    list1=[] \n",
+    "    list1[:0]=string \n",
+    "    return list1 \n",
+    "\n",
+    "for i in range(0,32):\n",
+    "    vec.append(stri.count(ru_alph[i]))\n",
+    "print(vec)\n",
+    "#print(Convert(t[0]))"
    ]
   },
   {
