--- a/JN_Dr.ipynb
+++ b/JN_Dr.ipynb
@@ -118,35 +118,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 82,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['пьповоодввбтлволыетаитллнлслттвгзаоадпксйгыичснлсзмонтвевиаамунналхжлмсьееноаеизкдсвлрльчэокезамаеуусовбллечырхявтсслотчуелдтрпволгпсннеиолоадетонаасыноеузсвнзжаачекеялмшаоралхллислаеероооотвкоаяксщотлчвогтуаиолвонмтесйолтоврпроазкьячяелароагбыойлкоаневонокмеощоасоеддлвлтжатосшенвподдршаротанлргнгсебнвлнмьакрниранернииодоменслтнвоыасптлороаоесалтномлуортмцентугзпмащпаниопсвверриыаеанглтлтиотюлтюебеясноовуросннаегсдетьтсщх', 'афюцээтшэлэашхыбтьбъжююрхшррюяррюбыэхшэючютъвашрэсзвлшзуюэщшрээюгшцшшшызвагэыюепююбрртрсввъгфюбртьффхэрюююэшегвыфтзлшьмхвщпшюшюбтхфюмрпзэзюгуххъэшъыряюфязгршряшгсэюбвгшшъчбмвхшшмзвэыйухвэыырэюээшрмхншрерцююхччьшыбшхмуэязтюаюргрбэювэбвфямсряъълхъэрвфсювбцлваюйфшхчюбсжюбсхашьюышгвмааытрхмыюьрсшшрррюлэрэаьгпяэарэбвахсхювхомышушпммэыыътзаююшвбъщыттююпыхбвьхмхраююыюрафухюуэуфарасюрпгхпьышрбмюющсмбштфэхачгръьяуюавютшырвтюээюврэ', 'бадышугабчбшхаатукаюотфъюыхдягеаэепыюдыфушгуббяяушехьиебдааълыбшфбыадиыеашсбдчхеффуыдбагббачшбеюодышджюыяцехгэбббшувабхяувшадеяшуеучвдюшжшчфыьебытеэвыхшшывдюхбющобфюхаючууэцпъъкаубшбшббшыпбцыгъбаэеаеюхбюуэфеугуитпэюябшгушбешедыешюбшюбагаоддбубдуушкджцбвуьбшьшбафгфеыуэтжэбеухжюяаэуыжбябчыеуюуйбъэгчабчобусдюушдбэхчжшфцоцавжхбкаъшошяжчышгдяпеыягбыхчепштгыбдгеацюдяаыхбадуббдыяууюдкюбдшычбтюдюйоагдушааубмыудбасыгходчаабютохуяж', 'ьйцжрхйссйрщддтжпцдгсжйдмтхаыйймжторддзсэцйоиыдмыхттцттиотйесщхжмепяатьтдъоегмпяяслжасммецтджуаалпжждкдоджяучспхрсхтмехчофхтратзпхщфтцдфцрсйыххжрстуфптефпфудйпддпйщчййотеомтхсимйппцксппсщсичътдфтчтйтмжлхпдйжудетвецмдужтххсмздцждйтмлчсяйчстоцуеплпхцйитыяпфутмжнтйчхспцйдощгасцкайдтцьыфйпясмитсяцзтчйдоарцпцпдиторччтесйтщтяффттйтгхнстуфцхтачхмйдтмийффоцжтупгдачиагмгмтимцмужмгтзьмодяхаихфхцйааыпййафнясмрйлпыхдчцтуучтцяйурщоптц', 'лйеантмаирммндсрсоитонзуатяутклзыяоамлуяирмнлнлпапзтрмтаргйаиуоырсьуоткоэеныонайлоапраргысвваажнвулумнпртоилчикьентмиоенчитчотщоалротоеаыоадетяоаетриийываеосрччсакогреопыаилтыеегсюрнеиапоаобссгктжгвмксяеекдыобытщыолгообаедлопьавцтзачийвюитаоооиаолорумтлуаолучкйшштонищмвечраеенрсгилацнамылусивонгжснбезкеаотолаипнэикнирсйиоттмублхнгуеатекщылдгдхекуоослйооопллекоолмрдявтрадтгантлзбкжльуортпктобдсидходхсуьетддьмрохсбесоизоожь', 'хпцщпхжлснмммэщзжиоплхффййюихчгушахтпупсщмммжхшхтхзжхпхнмхуйьиьчзщэфюжхфсцпюшплкхшштчюхзхзшщщчпхзюмязххзмоцхмнхсчвгзинцзщямскчфхъъъшчжкфчфспшйчфтшспсщтйзшюсгфзщфъхлзщлухтотххьтххжимпзяфчюжкпъщтхшмлчъзмпифузццвтжпплшзчтвптмпчхщмпмвчизфзвшлсжчцяитнпхлазхгротйймчхмпйрмчмззящзлйимзтлтхщзгхжссйгхшкмлпжмвшхчфийзшхжлпзщтзсоххдьлтэфнвпмвоийтъццмфимйплщъкружхффуфхмшмхфюицмхсмчпщммхймчззсзммшкихсчххшхпзххлзъхщчущзчзшфхтпзпшътчзфшфй', 'эяукшньдацяяяокпайпущыоууцуууояьэусяыоьъьпыъыэнэошурчюаужруцгуюощцьууръахасыахубробьуортыюаокшщсщоышрьаяютюашуроуъмайоьбьщябщуцышсяабзьуьыьщшцнхюьаъокуянкыьэбяьбащцццьыаооьрщтцаююцгдюкуцувьщфкнсббооашеынцощцоыяпчхюнрокщшьяъьсьащщгоучоэжаоцабьщйоыпыдусфеурмуцюоыыщуяъоысщцьхьюйчоуояукржязюофытуырощарщющукщотшещоаоьыцоятпгьяцоуущхжгоцыьэюьяойыьеыкъьфуьпуцуцеансщбуйуэуююьыкащхясьывощтыаэучюцыцвщыъаъуюхшрьойрбщнужхъъщаацошдкьж', 'бфпуфыпврдфбуфаррсвобзмемуужоффовотбземвлркрзррзррекпкупзттннтвиутдепвпврэхрвзнтсощфонвхкввмдгюрвзквупзмккрювмрмокжзннжщпрфрвгмвткфмжзужйзрврфжввдрзйтузтсрлкнвуаркойкуврдфохюзлурззщмчоущпвпввапжфсяитефвчаекннювэггхррйпурунхжкфудхлгугзнвримватртукэвзевзкжигтжвудуспфзгзхюггтузнъфжжбеъсзфкзоккпрбвифккхвррмкорвзуизнекпввруфжфщсспрвктслзунктффзюйвзфзлкупргооуфппрзипнттезчлбсюбвфклквоэрпттпйзмвйрюкэррофврржттнерукнксрузрдйнзргм', 'танооестиаецаыптловбкпаоилкиуивитуыоуиугиваггэбрниотолкенаеаотнеяыооьнрктпкпвгьмоаиноьлрпйлоеоцчбседеалуаичдтврсорерпмриасвнбоикевауимуадвнсгенчссираетверйнтаиооччывмотлыьаккртвддмеаиакеьнеесоуасотдооочоппкеаемееегсзвингоещилняуюеопысалиеанттсаьцннмоесвииинебиптоненозжнуыукмоируоуооргаеоевоонинеелнтстлучисзняелтооечмвтаивиерипрбалсмьерчврмгндйолслтнвыаучиоентеьоаиооонлыбакрллвливмооонаооенршхебгоопбпоаееасэзозугянкаряктыа', 'эаюаэььмчысхбьюгмхыхаачяэшшвбвремэчэвзвшвръаювюхтыфбябючшутбяэпэутсятхрэшюююшюжрыцыгээрраттьбыюхлшяхзчхъыэшюрърфэгфшырпызмхрлтяюююыявгвтлюрмюыхряхегыщэящюшюмбютиэхеххъгъээыгюхаюшъшвъьуюьзвъурфыхвьшюпбсгаюырьббъуфцювцыжхфюухзмхюяуетюывврьвъжашмсыххюатбвлэчыгылтртыюэмтрхюфяирхфеюоьцтъююыбыэлфщшьэвыхэюяючоъэврмтямрффяылштвыххаюзюршсрвиьэрхрюгшхюрнънюмхгыыэхэъшюэрсхвьтытхбвлвыхмормчююяшвюфыэьшьгяалгэфюцютаеэъмвтьхвююляыгвюзыв', 'хрвгъиъквчгчзэшгяжфжъгхгхчжсасвгжгхщгърмгаеъцгэбжжифгфевэххсгъфэгхъгяжчхмчзаадъввъхузгвцэдгжссчачагазхйаржъщягьъзячвгжщчэввбжхевазсесчехкьцмжсщжгбгчхяэгяжчгясцъээжъауэехигхщцчгъмэщрзхэабххегувчшчэщччзрчгжгяисаегрхюхъъъюхцяжхщевагевяжсхвгхзггаъруюзжъъагюжвяазагаггюрндяабчеъьввбюогъегммэфевкввдггегзрдабхшиххзжжевеввеъкбъгжвгъчъдьигзчиъэчмзювбвяизхзщуцущмъьхгьжгербгъгьвбфхчъфмщцанчьюезэжчимвкэугхмогибикххжвхщэъшчъиядгънэвиги', 'мситопхцрчутифшхцъущцэхтйиъннриъзфукфщкнрцнацффннзаыъшнищчхцърчнъумуыщруницдкшкцнкшпццицкцчуеаыцудеицтцнщъфкоъвущиищъърххнхицуньиыхрщцизышгъухцъшъъинрюшиъиъцяхшйъъсъбпнмокъинзслифншцлщднщпцубиаццхкищзшщауъщхцрныыъххуясцкбиърриъишцрципкцщтиксрщхйтцрйшртфърцщццскяктрншцнщццхииринрсънъннщшиыхцицулцщхсуиищущмъдтцрынзццхрчхозхъмрлшшфкрцфунхыцхрцицоцтцхшшиыъърълкркэщншшпицнрзачъирнррнкцрдкъичргфшичпхнкрхъцхпугтцфщцьфшшцтлрсюмпу', 'вргчфмфубъиьчмяъуиэъчъщььщмпруриымэяфцмэряъфчяфщьъътъсссюъсюнуъчъозяэсчсэььурсурэмямшщщгсььяюмщоящючнмщхюьсссълмъшщцщсцямэъчюфтфмтъдлщрщомэъяъэялмрщшрзлыъщыасмдциоььфмхсрзсрэщоъъэьспмюцщюфшкстмбомъчюэъюъсщчмрнъырисъмиюцзфыоэфэьюэогфшмюьюъйеэочлфьючсбнфмоцплгштююфьыюфщюшьрфюцшпехоьшсшшимукспчпщъхосьсосяфюсъгърщкфшпэмшсщсцфэщщъмясцюьсцшфтэсучощщющпъмъюьълуьрсчсфюээщощпрщэссълфуэоььщщцрмрьюбъъьмщзэъмфцтщшъбяпшюрьрмсгмъююъъмц', 'аоаелэляндшеигзтааянадоаяероудорогяммулкрйлтездньтйамшвтаксдрмсивсичнногкеооожанънкнпаяиляочояоечооаызупеулргрстбиеоирочтнвовсдсмкмлпгоипжтугитюжкаеулвдоберерриутоеихвквеепепнодтлжхдврояояабйдхоалеирддвктоегнылрановвсрошлооонсоутнулыурмьйфилсинмефаноыйгеоддтоеаонеерпчеыцоеьриоедооягкулзвгоооиимоогенлмннрючтреежшаотоероврквиинвшррьариквомпаоицечиойзсаасгшиасормрткоряолтьгргскньыиаииоррциьужвмдыхтсрлоеоенджоонуаогптксеоввпу', 'хпохтхсиисисзтлухскралжфнфгеииугрхквсбссцпряигисисефцлфсууфсгихщлицгюифглрмепрегиигвитхшлзфгхъуныипеоюслнпсрсюряфнфмнлиняцсъсяинцсцсссепугуплпгтинефевуноифгсицоксриъфггцрзиесюхгоггргфнфодпрсфюыкоситиилсфссзогзлгосфлывсоиътфдсхмкялхфмусгунлщиидиссгтнерлтржгссорнуцтулглофцохъикерикмтсцнлесуфуйдмгдисдеиццвифрссвфихжусзрлжиисспоилиьиедипсгжиунззгринзхцлнннгцзехфргссскгопиутсясяустпрьрпкцггыфдрглгиоесхфиижусухерссхылслусоъслл']\n",
-      "425\n",
-      "32\n",
-      "1184\n"
+      "[0, 16, 19, 4, 0, 7, 5, 2, 0, 16, 21, 8, 12, 0, 3]\n"
      ]
     }
    ],
    "source": [
-    "print(Y)\n",
-    "print(len(Y[0]))\n",
-    "print(len(block_freqs[0]))\n",
-    "m = 0\n",
-    "for i in range (len(block_freqs[0])):\n",
-    "    m = m + int(block_freqs[0][i])\n",
-    "print(m)"
+    "# \"o\" is most frequent in russian. position:14\n",
+    "m = 32 \n",
+    "def find_key_letter(mas):\n",
+    "    k = []\n",
+    "    for i in range(len(mas)):\n",
+    "        k_i = (mas[i] - 14) % m\n",
+    "        k.append(k_i)\n",
+    "    return k\n",
+    "\n",
+    "key_letters = find_key_letter(most_freq)\n",
+    "print(key_letters) #КЛЮЧ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_letters = {'а':0, 'б':1, 'в':2, 'г':3, 'д':4, 'е':5, 'ё':6, 'ж':7, 'з':8, 'и':9, 'й':10,'к':11, 'л':12, 'м':13, 'н':14, \n",
+    "                'о':15, 'п':16, 'р':17, 'с':18, 'т':19, 'у':20, 'ф':21, 'х':22, 'ц':23, 'ч':24, 'ш':25, 'щ':26, 'ъ':27,\n",
+    "                'ы':28, 'ь':29, 'э':30, 'ю':31, 'я':32}\n",
+    "\n",
+    "print(dict_letters.get('а'))\n",
+    "#for key, value in dict_letters:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -154,11 +176,12 @@
      "output_type": "stream",
      "text": [
       "['adgjmpsv', 'behknqt', 'cfiloru']\n",
-      "[37, 5, 24, 10, 11, 33, 3, 8, 13, 3, 10, 38, 12, 31, 52, 11, 19, 26, 29, 9, 0, 4, 1, 7, 3, 4, 0, 7, 6, 1, 2, 6]\n"
+      "[37, 5, 24, 10, 11, 33, 3, 8, 13, 3, 10, 38, 12, 31, 52, 11, 19, 26, 29, 9, 0, 4, 1, 7, 3, 4, 0, 7, 6, 1, 2, 6, 37, 5, 24, 10, 11, 33, 3, 8, 13, 3, 10, 38, 12, 31, 52, 11, 19, 26, 29, 9, 0, 4, 1, 7, 3, 4, 0, 7, 6, 1, 2, 6]\n"
      ]
     }
    ],
    "source": [
+    "#тестовый блок\n",
     "s = \"abcdefghijklmnopqrstuv\"\n",
     "t = []\n",
     "for i in range (0, 3):\n",
@@ -169,15 +192,10 @@
     "ru_alph = ['а', 'б', 'в', 'г', 'д', 'е', 'ж', 'з', 'и', 'й','к', 'л', 'м', 'н', 'о', 'п',\n",
     "           'р', 'с', 'т', 'у', 'ф', 'х', 'ц', 'ч', 'ш', 'щ', 'ъ','ы', 'ь', 'э', 'ю', 'я']\n",
     "\n",
-    "def Convert(string): \n",
-    "    list1=[] \n",
-    "    list1[:0]=string \n",
-    "    return list1 \n",
     "\n",
     "for i in range(0,32):\n",
     "    vec.append(stri.count(ru_alph[i]))\n",
-    "print(vec)\n",
-    "#print(Convert(t[0]))"
+    "print(vec)\n"
    ]
   },
   {
