визначення символів ключа прирівнюючи найчастіші літери в мові. Дивний ключ

--- a/JN_Dr.ipynb
+++ b/JN_Dr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -118,18 +118,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 16, 19, 4, 0, 7, 5, 2, 0, 16, 21, 8, 12, 0, 3]\n"
+      "[0, 16, 19, 4, 0, 7, 5, 2, 0, 16, 21, 8, 12, 0, 3]\n",
+      "['а', 'р', 'у', 'д', 'а', 'з', 'е', 'в', 'а', 'р', 'х', 'и', 'м', 'а', 'г']\n"
      ]
     }
    ],
    "source": [
+    "#визначення символів ключа прирівнюючи найчастіші літери в блоці та мові\n",
     "# \"o\" is most frequent in russian. position:14\n",
     "m = 32 \n",
     "def find_key_letter(mas):\n",
@@ -139,8 +141,26 @@
     "        k.append(k_i)\n",
     "    return k\n",
     "\n",
-    "key_letters = find_key_letter(most_freq)\n",
-    "print(key_letters) #КЛЮЧ"
+    "key_numbers = find_key_letter(most_freq)\n",
+    "print(key_numbers) #key letters`numbers\n",
+    "\n",
+    "def num_to_letter(y):\n",
+    "    word = []\n",
+    "    for item in y:\n",
+    "        word.append(ru_alph[item])\n",
+    "    return word\n",
+    "\n",
+    "key = num_to_letter(key_numbers)\n",
+    "print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#визначення символів ключа за допомогою функції М_і(g)\n"
    ]
   },
   {
