--- a/JN_Dr.ipynb
+++ b/JN_Dr.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -109,23 +109,24 @@
     "def find_most_freq(fr):\n",
     "    max_let = []  #indexes of most frequent letters of the block\n",
     "    for i in range(len(fr)): \n",
-    "        max_let.append(freqs[i].index(max(fr[i])))\n",
+    "        max_let.append(fr[i].index(max(fr[i])))\n",
     "    return max_let\n",
     "\n",
     "most_freq = find_most_freq(freqs) #indexes of most frequent letters of the block\n",
-    "print(\"max_let_ind=\",most_freq)\n"
+    "print(\"max_let_ind=\",most_freq)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 16, 19, 4, 0, 7, 5, 2, 0, 16, 21, 8, 12, 0, 3]\n",
+      "key 1:\n",
+      " [0, 16, 19, 4, 0, 7, 5, 2, 0, 16, 21, 8, 12, 0, 3]\n",
       "['а', 'р', 'у', 'д', 'а', 'з', 'е', 'в', 'а', 'р', 'х', 'и', 'м', 'а', 'г']\n"
      ]
     }
@@ -141,8 +142,8 @@
     "        k.append(k_i)\n",
     "    return k\n",
     "\n",
-    "key_numbers = find_key_letter(most_freq)\n",
-    "print(key_numbers) #key letters`numbers\n",
+    "key_numbers_1 = find_key_letter(most_freq) #key letters`numbers\n",
+    "print(\"key 1:\\n\", key_numbers_1)\n",
     "\n",
     "def num_to_letter(y):\n",
     "    word = []\n",
@@ -150,17 +151,104 @@
     "        word.append(ru_alph[item])\n",
     "    return word\n",
     "\n",
-    "key = num_to_letter(key_numbers)\n",
-    "print(key)"
+    "key_word_1 = num_to_letter(key_numbers_1)\n",
+    "print(key_word_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key 2:\n",
+      " [0, 16, 19, 4, 0, 7, 14, 2, 0, 16, 21, 8, 12, 0, 3]\n",
+      "['а', 'р', 'у', 'д', 'а', 'з', 'о', 'в', 'а', 'р', 'х', 'и', 'м', 'а', 'г']\n"
+     ]
+    }
+   ],
    "source": [
-    "#визначення символів ключа за допомогою функції М_і(g)\n"
+    "#визначення символів ключа за допомогою функції М_і(g)\n",
+    "\n",
+    "ru_freqs = {'а': 0.08413309204466018, 'б': 0.018444537359456968, 'в': 0.040462673208464264, 'г': 0.01711178764854606, \n",
+    "            'д': 0.02942828957254013, 'е': 0.07911241482488061,  'ж': 0.009113656111376064, 'з': 0.017559304095592126, \n",
+    "            'и': 0.06170010518269777, 'й': 0.011478633539561108, 'к': 0.03969340223562231, 'л': 0.05009897626529559, \n",
+    "            'м': 0.034354237033455935, 'н': 0.06501238019952048, 'о': 0.1144482481527697, 'п': 0.028178836718561154, \n",
+    "            'р': 0.04283091718005841, 'с': 0.05246558696518518, 'т': 0.062276650094403106, 'у': 0.030447451116177884, \n",
+    "            'ф': 0.0015924399119339897, 'х': 0.009015659809103203, 'ц': 0.0038561544944370764, 'ч': 0.015486682302521117, \n",
+    "            'ш': 0.008515878667511613, 'щ': 0.002889257645344849, 'ъ': 0.00022865803863667545, 'ы': 0.019801786145936095, \n",
+    "            'ь': 0.018248544754911247, 'э': 0.0031946794540952655, 'ю': 0.00484755041909752, 'я': 0.023942129916964466}\n",
+    "\n",
+    "def M_i(n, g):  #function M_i(g)\n",
+    "    m_i = 0\n",
+    "    for i in range (r):\n",
+    "        for t in range(len(ru_alph)):\n",
+    "            let = ru_alph[t]\n",
+    "            z = freqs[n][(t+g) % m]\n",
+    "            m_i = m_i + ru_freqs.get(let) * z\n",
+    "    return m_i\n",
+    "\n",
+    "\n",
+    "def find_k_n(n): #meaning of n_th letter of the key\n",
+    "    m_values = []\n",
+    "    for g in range (m):\n",
+    "        m_i = M_i(n, g)\n",
+    "        m_values.append(m_i)\n",
+    "    k_n = m_values.index(max(m_values))\n",
+    "    return k_n\n",
+    "\n",
+    "def find_key():\n",
+    "    k = []\n",
+    "    for j in range(r):\n",
+    "        k.append(find_k_n(j))\n",
+    "    return k\n",
+    "\n",
+    "key_numbers_2 = find_key() #key letters`numbers\n",
+    "print(\"key 2:\\n\", key_numbers_2)\n",
+    "\n",
+    "key_word_2 = num_to_letter(key_numbers_2)\n",
+    "print(key_word_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k= 1\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 33 %32\n",
+    "print(\"k=\", k)\n",
+    "#print(freqs[3][1])\n",
+    "print(len(freqs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(freqs))"
    ]
   },
   {
